2005-06-07  Albert Chu  <chu11@llnl.gov>

	* Removed hard defined maximum metric count.  Added
	cerebrod_metric_max configuration option.

	* Removed hard defined packet buffer for situations where the
	received/sent packet size is not known.

	* Added get configuration routines to libcerebro.
	
	* Various bug fixes.

	* Various code cleanup.

	* Various documentation cleanup/fixing.

2005-06-06  Albert Chu  <chu11@llnl.gov>

	* tagged pre-heartbeat-protocol-change-1

	* Removed starttime metric.

	* Reworked heartbeat protocol to use variable length data.

	* Reworked heartbeat protocol to use variable length metrics.

	* Reworked metric protocol to use variable length data.

	* Reworked libcerebro library around new protocol.
	
2005-06-03  Albert Chu  <chu11@llnl.gov>

	* Cleaned up module loading/unloading libcerebro library calls.
	Calls now allow multiple cerebro handles to safely load/unload
	modules.

	* tagged pre-libcerebro-metric-type-rework-1

	* Rework metric_type storage and retrieval 

	* Add various flags for metric data retrieval
	
2005-06-02  Albert Chu  <chu11@llnl.gov>

	* src/modules/cerebro_config_gendersllnl.c: Default 'hostnames' on
	compute nodes are the alternate nodenames, not primary nodenames.

	* src/cerebrod/cerebrod_node_data.c
	(_cerebrod_metric_name_list_dump): Fix output bug.

	* tagged pre-libcerebro-module-rework-1
	
2005-06-01  Albert Chu  <chu11@llnl.gov>

	* Various bug fixes and code cleanup.

	* Complete manpage cleanup.
	
	* tagged cerebro-1-0-0-pre2

2005-05-31  Albert Chu  <chu11@llnl.gov>
	
	* Completed Rework.

	* Begin cleaning up manpages.
	
2005-05-30  Albert Chu  <chu11@llnl.gov>
	
	* Continued rework.
	
2005-05-29  Albert Chu  <chu11@llnl.gov>

	* Continued rework.
	
2005-05-28  Albert Chu  <chu11@llnl.gov>

	* tagged pre-libcerebro-rework-1

	* begin libcerebro rework around metric server and metric data.

	* remove all updown server references

	* remove duplicate functions in libcerebro
