@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: cerebro_nodelist_metric_name.3,v 1.4 2005-06-07 22:20:39 achu Exp $
+\."$Id: cerebro_nodelist_metric_name.3,v 1.5 2005-06-08 15:32:01 achu Exp $
 \."#############################################################################
 .TH CEREBRO_NODELIST_METRIC_NAME 3 "May 2005" "LLNL" "LIBCEREBRO"
 .SH "NAME"
@@ -99,6 +99,8 @@ CEREBRO_METRIC_VALUE_TYPE_FLOAT - float
 CEREBRO_METRIC_VALUE_TYPE_DOUBLE - double
 
 CEREBRO_METRIC_VALUE_TYPE_STRING - NUL terminated string
+
+CEREBRO_METRIC_VALUE_TYPE_RAW - raw undefined data
 
 .SH "RETURN VALUES"
 For \fBcerebro_nodelist_metric_name\fR, the metric name for the
