@@ -1,11 +1,18 @@
 /*****************************************************************************\
- *  $Id: cerebrod_heartbeat.h,v 1.11 2005-06-08 00:10:49 achu Exp $
+ *  $Id: cerebrod_heartbeat.h,v 1.12 2005-06-08 15:32:01 achu Exp $
 \*****************************************************************************/
 
 #ifndef _CEREBROD_HEARTBEAT_H
 #define _CEREBROD_HEARTBEAT_H
 
-#include "cerebro/cerebrod_heartbeat_protocol.h"
+#include "cerebrod_heartbeat_protocol.h"
+
+/*
+ * cerebrod_heartbeat_destroy
+ *
+ * destroy a heartbeat packet
+ */
+void cerebrod_heartbeat_destroy(struct cerebrod_heartbeat *hb);
 
 /* 
  * cerebrod_heartbeat_dump
@@ -14,12 +21,5 @@
  * debug_output_mutex held.
  */
 void cerebrod_heartbeat_dump(struct cerebrod_heartbeat *hb);
-
-/*
- * cerebrod_heartbeat_destroy
- *
- * destroy a heartbeat packet
- */
-void cerebrod_heartbeat_destroy(struct cerebrod_heartbeat *hb);
 
 #endif /* _CEREBROD_HEARTBEAT_H */
