@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_metric.c,v 1.26 2005-06-08 00:30:38 achu Exp $
+ *  $Id: cerebrod_metric.c,v 1.27 2005-06-08 15:32:01 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -212,6 +212,7 @@ _cerebrod_metric_response_marshall(struct cerebro_metric_response *res,
           count += len;
           break;
         case CEREBRO_METRIC_VALUE_TYPE_STRING:
+        case CEREBRO_METRIC_VALUE_TYPE_RAW:
           if ((len = _cerebro_marshall_buffer(res->metric_value,
                                               res->metric_value_len,
                                               buf + count,
